{
  "version": 4,
  "terraform_version": "1.1.5",
  "serial": 8,
  "lineage": "fe1b021a-753b-9c73-48c4-fa4ffb240720",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "webserver",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-03fa4afc89e4a8a09",
            "arn": "arn:aws:ec2:ap-south-1:499785316263:instance/i-0332acf6b27810d30",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0332acf6b27810d30",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0c24b51d28f1d16ad",
            "private_dns": "ip-172-31-32-122.ap-south-1.compute.internal",
            "private_ip": "172.31.32.122",
            "public_dns": "ec2-3-110-33-8.ap-south-1.compute.amazonaws.com",
            "public_ip": "3.110.33.8",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-03c7ffaca418de60d",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "remote",
              "webserver"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-03f8bf5d37642a148",
            "tags": {
              "Name": "webserver",
              "Project": "Zomato"
            },
            "tags_all": {
              "Name": "webserver",
              "Project": "Zomato"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-079c61deb9b3889f5",
              "sg-0bd03cd0900fc3842"
            ]
          },
          "dependencies": [
            "aws_security_group.remote",
            "aws_security_group.webserver"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "remote",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:499785316263:security-group/sg-079c61deb9b3889f5",
            "description": "Allow inbound 22 traffic ",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-079c61deb9b3889f5",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "remote",
            "name_prefix": "",
            "owner_id": "499785316263",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "remote",
              "Project": "Zomato"
            },
            "tags_all": {
              "Name": "remote",
              "Project": "Zomato"
            },
            "timeouts": null,
            "vpc_id": "vpc-071f574cad586bf9f"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "webserver",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:499785316263:security-group/sg-0bd03cd0900fc3842",
            "description": "Allow inbound 80 traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0bd03cd0900fc3842",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "webserver",
            "name_prefix": "",
            "owner_id": "499785316263",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "webserver",
              "Project": "Zomato"
            },
            "tags_all": {
              "Name": "webserver",
              "Project": "Zomato"
            },
            "timeouts": null,
            "vpc_id": "vpc-071f574cad586bf9f"
          },
          "sensitive_attributes": []
        }
      ]
    }
  ]
}